2018-03-15  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-986

	* src/interactive_workspace.cc
	(InteractiveWorkspace::execute_workspace_method):

	Output method name in the API the same way the ARTS executable does.

2018-03-14  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-985

	* src/m_abs.cc (abs_xsec_per_speciesAddLines2):

	Function was accidentally defined inside the else part of
	ifdef ENABLE_NETCDF. Which means compilation broke if netcdf was
	enabled.

2018-03-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-984

	* Cleaning! Compared to last commit, hopefully no impact at all.
	Just removed code that is inactive, mainly since last commit but
	found some very old stuff as well.

	* src/rte.cc: About 10 functions removed.

	* src/jacobian.cc:
	* src/m_jacobian.cc:
	* src/m_cloudradar.cc:
	* src/m_rte.cc:
	* src/m_transmitter.cc: 1-2 functions removed.

2018-03-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-983

	* With this commit the new set of iy-methods are "activated". That
	is, e.g. what has been iyEmissionStandard2 for some time is now
	iyEmissionStandard. Soem specific changes listed below, while bug
	fixes and adoptions not commented. For a high-level description,
	see email to arts-dev and arts-users.

	* src/m_rte.cc (iy_auxFillParticleVariables): Removed. Can not be
	performed with new version of iy_aux.

	* src/workspace.cc: iy_aux is now a ArrayOfMatrix.

	* doc/uguide/faraday.tex:
	* doc/uguide/transmission.tex: Commented out parts refering to iyRadioLink.

	* doc/uguide/rte.tex: Removed paragraph around iy\_auxFillParticleVariables.

2018-03-13  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-982

	* src-propagationmatrix.h:  Added a check to see if the
	propagation matrix is only rotating at a given position

	* src/rte.cc:  Set source and their jacobian to zero
	when there is a layer of pure rotation

	* src/zeeman.cc:  N=0 lines were failing after last update.